# whisperX-FastAPI

./: .dockerignore  .env.example  .env.temporal.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  WARP.md  config.yaml  context7.json  docker-compose.gpu.yaml  docker-compose.yaml  fix_fastapi_cell.py  pyproject.toml  requirements.txt  start_server.py  test_final_verification.py  test_meralion_implementation.py
.clinerules/: clinerules.md
.github/: copilot-instructions.md
.github/instructions/: *.instructions.md
app/: activities.py  audio.py  cleanup.py  compatibility.py  config.py  files.py  language_optimization.py  logger.py  main.py  main_sqladmin.py  meralion_services.py  model_manager.py  schemas.py  temporal_activities.py  temporal_config.py  temporal_manager.py  temporal_monitoring.py  temporal_worker.py  temporal_workflows.py  trace_middleware.py  transcript.py  warnings_filter.py  whisperx_services.py
app/docs/: openapi.json  openapi.yaml
app/hipaa/: __init__.py  access_control.py  audit_logger.py  encryption.py  phi_minimizer.py
app/llm/: __init__.py  chatbot_service.py  lm_studio_client.py  medical_llm_service.py
app/patients/: __init__.py  admin.py  database.py  filename_utils.py  mapping.py  models.py
app/routers/: admin.py  medical.py  patient_workflows.py  rag.py  stt.py  stt_services.py  temporal_tasks.py
app/services/: __init__.py  dialogue_formatter.py  speaker_identifier.py  transcription_transformer.py  whisperx_parser.py
app/temporal/: __init__.py  activities.py  config.py  error_handler.py  manager.py  monitoring.py  speaker_aware_medical_activities.py  stt_to_medical_workflow.py  worker.py  workflows.py
app/vector_store/: __init__.py  medical_vector_store.py
datasets/kaggle-simulated-patient-physicia-interviews/: README.md
datasets/transcripts/sg/: sg-1.txt  sg-2.txt
docker/: Dockerfile.cpu  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.temporal.yml  docker-compose.testing.yml  dockerfile
docs/: DOCKER.md  LANGUAGE_OPTIMIZATION.md  advanced_agentic_rag_plan.md  temporal_retry_policies.md
docs/adr/: 001-performance-optimization-strategy.md  002-lm-studio-integration-strategy.md  003-vector-database-strategy.md  004-hipaa-compliance-opensource.md  005-whisperx-transcription-json-schema.md  006-speaker-identification-heuristic.md  007-patient-database-architecture.md  008-knowledge-graph-integration.md  009-live-voice-recording-ui.md
docs/validation/: speaker-diarization-validation-report.md
notebooks/: README.md  colab_server.py  fix_numpy.sh  test_installation.py  whisperx_fastapi_colab.ipynb
requirements/: prod.txt
scripts/: download_diarization_model.py  install_cuda_libs.sh  model_manager.py  wait_for_server.py  wait_for_worker.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml  secrets.toml
streamlit_app/components/: __init__.py  patient_card.py  protected_name.py
streamlit_app/pages/: 0_🏠_Home.py  1_📤_Upload.py  2_👥_Patients.py  2_📊_Workflows.py  2_🔍_Workflows.py  3_👥_Patients.py  3_💬_Medical_QA.py  3_🔍_Workflows.py  4_🔍_Query.py
streamlit_app/utils/: __init__.py  api_client.py  formatting.py
tests/: README.md  README_MEDICAL_TESTS.md  conftest.py  pytest.ini  test_medical_endpoints.py  test_meralion_services.py  test_temporal_retry_policies.py  test_whisperx_services.py
tests/integration/: test_hipaa_filename_compliance.py  test_kaggle_medical_audio.py  test_medical_endpoints.py  test_model_caching.py  test_real_endpoints_kaggle_dataset.py  test_soap_chatbot_integration.py  test_soap_generation.py  test_stt_medical_pipeline.py  test_temporal_error_handling.py  test_unified_stt_medical_workflow.py  test_vietnamese_audio.py  test_whisperx_services.py  test_whisperx_to_medical_pipeline.py
tests/scripts/: aggregate_validation_results.py  analyze_kaggle_results.py
tests/services/: __init__.py
tests/unit/: test_chatbot_soap_context.py  test_dialogue_formatter.py  test_hipaa_filename_utils.py  test_medical_llm_service_speaker_aware.py  test_medical_vector_store.py  test_model_caching.py  test_patient_mapping.py  test_phi_tracking.py  test_speaker_identifier.py  test_temporal_retry_policies.py  test_transcription_transformer.py  test_whisperx_parser.py
